[gd_scene load_steps=10 format=3 uid="uid://bwt0quwep2u70"]

[ext_resource type="Script" path="res://src/scripts/UI.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dhxgqw1x8kmem" path="res://src/sprites/Coin.png" id="2"]
[ext_resource type="Theme" uid="uid://c6rmflxvbg21u" path="res://src/themes/UI.tres" id="2_paxcv"]
[ext_resource type="PackedScene" uid="uid://cbty2tnsjrx8o" path="res://src/actors/inventorySquare.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://1h2qmeoguplg" path="res://src/fonts/AmberyGardenRegular-PKjGd.ttf" id="3_ialca"]
[ext_resource type="PackedScene" uid="uid://c8fwb1k5offpa" path="res://src/actors/saveButton.tscn" id="4_6tyxb"]
[ext_resource type="PackedScene" uid="uid://cxekgh5xwsn6w" path="res://src/actors/sceneButton.tscn" id="4_7ka2x"]
[ext_resource type="PackedScene" uid="uid://cn3kbi61pkp6x" path="res://src/actors/marketSquare.tscn" id="6_allxi"]
[ext_resource type="FontFile" uid="uid://brkyglu6fvece" path="res://src/fonts/MotleyForcesRegular-w1rZ3.ttf" id="9_3v4qi"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="right" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.160784, 0.176471, 0.286275, 1)

[node name="vBox" type="VBoxContainer" parent="CanvasLayer/right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -341.0
offset_right = 115.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_paxcv")
alignment = 1

[node name="mLabel" type="Label" parent="CanvasLayer/right/vBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.858824, 0.858824, 0.52549, 1)
theme_override_fonts/font = ExtResource("3_ialca")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="Coin" type="Sprite2D" parent="CanvasLayer/right/vBox/mLabel"]
visible = false
position = Vector2(-20, 5)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2")

[node name="sBox" type="HBoxContainer" parent="CanvasLayer/right/vBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="sButton" type="Button" parent="CanvasLayer/right/vBox/sBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "$5"
text = "buy seed"

[node name="s5" type="Button" parent="CanvasLayer/right/vBox/sBox"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "$25"
text = " x5 "

[node name="s10" type="Button" parent="CanvasLayer/right/vBox/sBox"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "$50"
text = " x10 "

[node name="sLabel" type="Label" parent="CanvasLayer/right/vBox"]
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="unlockButton" type="Button" parent="CanvasLayer/right/vBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "$1000"
text = "unlock new seed"

[node name="uLabel" type="Label" parent="CanvasLayer/right/vBox"]
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="rBox" type="HBoxContainer" parent="CanvasLayer/right/vBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="rButton" type="Button" parent="CanvasLayer/right/vBox/rBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "unlock cyan"

[node name="r5" type="Button" parent="CanvasLayer/right/vBox/rBox"]
layout_mode = 2
size_flags_horizontal = 0
text = " x5 "

[node name="r10" type="Button" parent="CanvasLayer/right/vBox/rBox"]
layout_mode = 2
size_flags_horizontal = 0
text = " x10 "

[node name="gBox" type="HBoxContainer" parent="CanvasLayer/right/vBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="gButton" type="Button" parent="CanvasLayer/right/vBox/gBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "unlock magenta"

[node name="g5" type="Button" parent="CanvasLayer/right/vBox/gBox"]
layout_mode = 2
size_flags_horizontal = 0
text = " x5 "

[node name="g10" type="Button" parent="CanvasLayer/right/vBox/gBox"]
layout_mode = 2
size_flags_horizontal = 0
text = " x10 "

[node name="bBox" type="HBoxContainer" parent="CanvasLayer/right/vBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="bButton" type="Button" parent="CanvasLayer/right/vBox/bBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "unlock yellow"

[node name="b5" type="Button" parent="CanvasLayer/right/vBox/bBox"]
layout_mode = 2
size_flags_horizontal = 0
text = " x5 "

[node name="b10" type="Button" parent="CanvasLayer/right/vBox/bBox"]
layout_mode = 2
size_flags_horizontal = 0
text = " x10 "

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/right/vBox"]
layout_mode = 2
alignment = 1

[node name="rLabel" type="Label" parent="CanvasLayer/right/vBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
horizontal_alignment = 1

[node name="gLabel" type="Label" parent="CanvasLayer/right/vBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
horizontal_alignment = 1

[node name="bLabel" type="Label" parent="CanvasLayer/right/vBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
horizontal_alignment = 1

[node name="allColors" type="Button" parent="CanvasLayer/right/vBox"]
visible = false
layout_mode = 2
text = "all colors"

[node name="invUpgrade" type="Button" parent="CanvasLayer/right/vBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
tooltip_text = "$2500"
text = "upgrade storage (+25)"

[node name="invRow1" type="HBoxContainer" parent="CanvasLayer/right/vBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Box" parent="CanvasLayer/right/vBox/invRow1" instance=ExtResource("3")]
layout_mode = 2

[node name="Box2" parent="CanvasLayer/right/vBox/invRow1" instance=ExtResource("3")]
layout_mode = 2
cropType = 1

[node name="Box3" parent="CanvasLayer/right/vBox/invRow1" instance=ExtResource("3")]
layout_mode = 2
cropType = 2

[node name="Box4" parent="CanvasLayer/right/vBox/invRow1" instance=ExtResource("3")]
layout_mode = 2
cropType = 3

[node name="invRow2" type="HBoxContainer" parent="CanvasLayer/right/vBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Box" parent="CanvasLayer/right/vBox/invRow2" instance=ExtResource("3")]
layout_mode = 2
cropType = 4

[node name="Box2" parent="CanvasLayer/right/vBox/invRow2" instance=ExtResource("3")]
layout_mode = 2
cropType = 5

[node name="Box3" parent="CanvasLayer/right/vBox/invRow2" instance=ExtResource("3")]
layout_mode = 2
cropType = 6

[node name="Box4" parent="CanvasLayer/right/vBox/invRow2" instance=ExtResource("3")]
layout_mode = 2
cropType = 7

[node name="invLabel" type="Label" parent="CanvasLayer/right/vBox"]
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="saveButton" parent="CanvasLayer/right/vBox" instance=ExtResource("4_6tyxb")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = null

[node name="sceneButton" parent="CanvasLayer/right/vBox" instance=ExtResource("4_7ka2x")]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("2_paxcv")
text = "home menu"
scenePath = "res://src/scenes/home.tscn"

[node name="marketRect" type="ColorRect" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(60, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -310.0
offset_right = -250.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.219608, 0.227451, 0.290196, 1)

[node name="marketGrid" type="GridContainer" parent="CanvasLayer/marketRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -294.0
offset_right = 20.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2

[node name="marketSquare" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2

[node name="marketSquare2" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2
cropType = 1

[node name="marketSquare3" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2
cropType = 2

[node name="marketSquare4" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2
cropType = 3

[node name="marketSquare5" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2
cropType = 4

[node name="marketSquare6" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2
cropType = 5

[node name="marketSquare7" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2
cropType = 6

[node name="marketSquare8" parent="CanvasLayer/marketRect/marketGrid" instance=ExtResource("6_allxi")]
layout_mode = 2
cropType = 7

[node name="marketButton" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -302.0
offset_top = 11.0
offset_right = -262.0
offset_bottom = 51.0
grow_horizontal = 0
tooltip_text = "unlock market ($3000)"
theme = ExtResource("2_paxcv")
theme_override_fonts/font = ExtResource("9_3v4qi")
theme_override_font_sizes/font_size = 30
text = "M"

[connection signal="pressed" from="CanvasLayer/right/vBox/sBox/sButton" to="." method="seedBought" binds= [1]]
[connection signal="pressed" from="CanvasLayer/right/vBox/sBox/s5" to="." method="seedBought" binds= [5]]
[connection signal="pressed" from="CanvasLayer/right/vBox/sBox/s10" to="." method="seedBought" binds= [10]]
[connection signal="pressed" from="CanvasLayer/right/vBox/unlockButton" to="." method="unlockSeed"]
[connection signal="pressed" from="CanvasLayer/right/vBox/rBox/rButton" to="." method="colorBought" binds= [0, 1]]
[connection signal="pressed" from="CanvasLayer/right/vBox/rBox/r5" to="." method="colorBought" binds= [0, 5]]
[connection signal="pressed" from="CanvasLayer/right/vBox/rBox/r10" to="." method="colorBought" binds= [0, 10]]
[connection signal="pressed" from="CanvasLayer/right/vBox/gBox/gButton" to="." method="colorBought" binds= [1, 1]]
[connection signal="pressed" from="CanvasLayer/right/vBox/gBox/g5" to="." method="colorBought" binds= [1, 5]]
[connection signal="pressed" from="CanvasLayer/right/vBox/gBox/g10" to="." method="colorBought" binds= [1, 10]]
[connection signal="pressed" from="CanvasLayer/right/vBox/bBox/bButton" to="." method="colorBought" binds= [2, 1]]
[connection signal="pressed" from="CanvasLayer/right/vBox/bBox/b5" to="." method="colorBought" binds= [2, 5]]
[connection signal="pressed" from="CanvasLayer/right/vBox/bBox/b10" to="." method="colorBought" binds= [2, 10]]
[connection signal="pressed" from="CanvasLayer/right/vBox/allColors" to="." method="allColors"]
[connection signal="pressed" from="CanvasLayer/right/vBox/invUpgrade" to="." method="invBought"]
[connection signal="pressed" from="CanvasLayer/marketButton" to="." method="marketBuy"]
